bk_ida/gccida/g0/put_condition_code
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6003:27: error: must use 'enum' tag to refer to type 'rtx_code'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6003:42: error: must use 'enum' tag to refer to type 'machine_mode'
void  put_condition_code( rtx_code code, machine_mode mode, int reverse, int fp, FILE *file) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6009:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+18h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6010:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+1Ch] [rbp-14h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6011:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code bypass_code; // [rsp+20h] [rbp-10h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6012:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code second_code; // [rsp+24h] [rbp-Ch] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6030:2: error: expected expression
 struct suffix = ( const char *)&unk_77BBD2; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6033:2: error: expected expression
 struct suffix = ( const char *)&unk_77BBD0; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6038:16: error: expected identifier or '('
 struct suffix = ( const char *)&unk_77BBE3; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6044:16: error: expected identifier or '('
 struct suffix = ( const char *)&unk_77BBE6; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6050:16: error: expected identifier or '('
 struct suffix = ( const char *)&unk_77BBD5; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6055:16: error: expected identifier or '('
 struct suffix = ( const char *)&unk_77BBEF; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6060:16: error: expected identifier or '('
 struct suffix = ( const char *)&unk_77BBDD; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6066:16: error: expected identifier or '('
 struct suffix = ( const char *)&unk_77BBDF; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6073:22: error: use of undeclared identifier 'unk_77BBE9'
v6 = ( const char *)&unk_77BBE9; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6075:22: error: use of undeclared identifier 'unk_77BBEC'
v6 = ( const char *)&unk_77BBEC; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6076:16: error: expected identifier or '('
 struct suffix = v6; 
               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6082:22: error: use of undeclared identifier 'off_77BBD7'
v5 = ( const char *)&off_77BBD7; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/i386.c:6084:22: error: use of undeclared identifier 'unk_77BBDB'
v5 = ( const char *)&unk_77BBDB; 
                     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/put_condition_code/src/obj/i386.o] Error 1
